<resources>
    <string name="app_name">AndroidUtils</string>
    <string name="cancel">Abbrechen</string>
    <string name="lbl_position">%d.</string>
    <string name="lbl_r">Rot: %d</string>
    <string name="lbl_g">Grün: %d</string>
    <string name="lbl_b">Blau: %d</string>
    <string name="colorpicker">Farbauswahl</string>
    <string name="lbl_h">Farbwert: %d</string>
    <string name="lbl_s">Sättigung: %d</string>
    <string name="lbl_v">Dunkelstufe: %d</string>
    <string name="ok">Übernehmen</string>
    <string name="item_name">Name</string>
    <string name="title_mainitem_create">Neuer Eintrag</string>
    <string name="error_min_max_length">Zwischen %1$d und %2$d Zeichen erforderlich</string>
    <string name="create">Erstellen</string>
    <string name="title_mainitem_change">Eintrag ändern</string>
    <string name="change">Ändern</string>
    <string name="show_slider">Slider anzeigen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recycler_view_title">RecyclerView</string>
    <string name="dpad">Directional-Pad</string>
    <string name="primary_color">Haupt</string>
    <string name="accent_color">Schmuck</string>
    <string name="chevron_color">Pfeil</string>
    <string name="background_color">Hintergrund</string>
    <string name="window_color">Fenster</string>

    <string name="lbl_center_button_size">Center Button Größe: %d</string>
    <string name="lbl_padding_size">Padding Größe: %d</string>
    <string name="lbl_chevron_size">Chevron Größe: %d</string>
    <string name="lbl_chevron_stroke">Chevron Breite: %d</string>
    <string name="lbl_chevron_padding">Chevron Padding: %d</string>
    <string name="lbl_text_size">Text Größe: %d</string>
    <string name="edit_center_text">Text bearbeiten</string>
    <string name="multiline">Mehrzeilig</string>
    <string name="open_dialog">Dialog öffnen</string>
    <string name="prefil_input">Eingabefeld Inhalt</string>
    <string name="min_input">Minimum Zeichen</string>
    <string name="max_input">Maximum Zeichen</string>
    <string name="dialogs">Dialoge</string>
    <string name="error_min_enabled">Min. Prüfung</string>
    <string name="error_max_enabled">Max. Prüfung</string>
    <string name="error_min_length">Mindestens %d Zeichen erforderlich</string>
    <string name="error_max_length">Maximal %d Zeichen möglich</string>
    <string name="title">Überschrift</string>
    <string name="hint">Hinweis</string>
    <string name="open_progressdialog">Fortschrittsdialog öffnen</string>
    <string name="ruler">Lineale</string>
    <string name="use_imperial_units">inch</string>
    <string name="text">Text</string>
    <string name="marks">Markierungen</string>
    <string name="info_text">android-utils v%1$s\nDevice: %2$s %3$s %4$s\nOS: android %5$s\nForm: %6$s\nAvailable Memory: %7$s/%8$s MB</string>
    <string name="info">Info</string>
    <string name="hex_color">Hex-Farbe</string>
    <string name="hint_hex_color">Farbe als Hexcode</string>
    <string name="error_hex">Farbe muss mit 6 Zeichen definiert werden</string>
    <string name="please_wait">Bitte Warten</string>
    <string name="palette">Palette</string>
    <string name="action_redo">Rückgängig</string>
    <string name="restored_entry">Eintrag wiederhergestellt</string>
    <string name="deleted_entry">Eintrag gelöscht</string>
    <string name="reload_image">Bild wird neu geladen: %s</string>
    <string name="lbl_span_count">Spalten Anzahl: %d</string>
    <string name="lbl_aspect_width">Aspekt Breite: %d</string>
    <string name="lbl_aspect_height">Aspekt Höhe: %d</string>
    <string name="lbl_img_resolution">Bildauflösung: %dpx</string>
    <string name="edit_keywords">Schlagwörter bearbeiten</string>
    <string name="clearing_cache">Cache leeren</string>
    <string name="material">Material</string>
    <string name="loading">Lade Daten...</string>
    <string name="lorem_ipsum"><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facillimum id quidem est, inquam. Potius inflammat, ut coercendi magis quam dedocendi esse videantur. Traditur, inquit, ab Epicuro ratio neglegendi doloris. Aliter homines, aliter philosophos loqui putas oportere? Est enim effectrix multarum et magnarum voluptatum. Quod ea non occurrentia fingunt, vincunt Aristonem; Istam voluptatem perpetuam quis potest praestare sapienti? Beatum, inquit. </p>  <p>Videamus animi partes, quarum est conspectus illustrior; Quare hoc videndum est, possitne nobis hoc ratio philosophorum dare. At enim hic etiam dolore. Hoc loco tenere se Triarius non potuit. Quid ergo aliud intellegetur nisi uti ne quae pars naturae neglegatur? Quid enim me prohiberet Epicureum esse, si probarem, quae ille diceret? Ergo instituto veterum, quo etiam Stoici utuntur, hinc capiamus exordium. An est aliquid, quod te sua sponte delectet? Summus dolor plures dies manere non potest? </p>  <p>Quod autem in homine praestantissimum atque optimum est, id deseruit. Duo Reges: constructio interrete. Eaedem res maneant alio modo. Que Manilium, ab iisque M. Etenim semper illud extra est, quod arte comprehenditur. Huius ego nunc auctoritatem sequens idem faciam. Deinde disputat, quod cuiusque generis animantium statui deceat extremum. Causa autem fuit huc veniendi ut quosdam hinc libros promerem. Nec lapathi suavitatem acupenseri Galloni Laelius anteponebat, sed suavitatem ipsam neglegebat; Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P. </p>  <p>Sin kakan malitiam dixisses, ad aliud nos unum certum vitium consuetudo Latina traduceret. Rationis enim perfectio est virtus; Ut in geometria, prima si dederis, danda sunt omnia. Duae sunt enim res quoque, ne tu verba solum putes. Sic, et quidem diligentius saepiusque ista loquemur inter nos agemusque communiter. Quamquam haec quidem praeposita recte et reiecta dicere licebit. Transfer idem ad modestiam vel temperantiam, quae est moderatio cupiditatum rationi oboediens. Dat enim intervalla et relaxat. Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; </p>  <p>Dic in quovis conventu te omnia facere, ne doleas. Hoc non est positum in nostra actione. Facillimum id quidem est, inquam. Cum audissem Antiochum, Brute, ut solebam, cum M. Non igitur bene. Claudii libidini, qui tum erat summo ne imperio, dederetur. Utram tandem linguam nescio? Atqui iste locus est, Piso, tibi etiam atque etiam confirmandus, inquam; Ego vero isti, inquam, permitto. Sed erat aequius Triarium aliquid de dissensione nostra iudicare. Omnia contraria, quos etiam insanos esse vultis. Nondum autem explanatum satis, erat, quid maxime natura vellet. </p>]]></string>
</resources>
