<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/app_bar_layout"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_open_dialog"
                    style="@style/accent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_spacing"
                    android:text="@string/open_dialog"/>

                <ScrollView
                    android:id="@+id/controls"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/medium_spacing"
                    android:fillViewport="true"
                    android:padding="@dimen/medium_spacing"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_hint"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prefil_input">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_pre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/min_input">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_min"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/max_input">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/et_max"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"/>

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/chk_multiline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_spacing"
                                android:text="@string/multiline"/>

                            <CheckBox
                                android:id="@+id/chk_error_min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_spacing"
                                android:text="@string/error_min_enabled"/>

                            <CheckBox
                                android:id="@+id/chk_error_max"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/medium_spacing"
                                android:text="@string/error_max_enabled"/>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/btn_open_progress_dialog"
                    style="@style/accent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/xlarge_spacing"
                    android:text="@string/open_progressdialog"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/drawer"/>
</android.support.v4.widget.DrawerLayout>