<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/app_bar_layout"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <de.hddesign.androidutils.androidutils.custom.RulerView
                    android:id="@+id/ruler_view"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="@dimen/large_spacing"/>

                <ScrollView
                    android:id="@+id/controls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/medium_spacing"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/v_primary_color"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:foreground="@drawable/card_ripple"
                                tools:background="@color/colorPrimary"/>

                            <View
                                android:id="@+id/v_accent_color"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:foreground="@drawable/card_ripple"
                                tools:background="@color/colorPrimary"/>

                            <View
                                android:id="@+id/v_backgroundcolor"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:foreground="@drawable/card_ripple"
                                tools:background="@color/colorPrimary"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/medium_spacing"
                                android:layout_marginRight="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@string/marks"/>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/medium_spacing"
                                android:layout_marginRight="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@string/text"/>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/medium_spacing"
                                android:layout_marginRight="@dimen/medium_spacing"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@string/background_color"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txt_text_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_spacing"
                            android:gravity="center"
                            android:padding="@dimen/medium_spacing"
                            android:text="@string/lbl_text_size"
                            android:textSize="@dimen/large_text"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/iv_decrease_text_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/card_ripple"
                                android:padding="@dimen/medium_spacing"
                                android:src="@drawable/ic_remove"
                                android:tint="@color/colorPrimary"/>

                            <android.support.v7.widget.AppCompatSeekBar
                                android:id="@+id/seekbar_text_size"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="@dimen/medium_spacing"/>

                            <ImageView
                                android:id="@+id/iv_increase_text_size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/card_ripple"
                                android:padding="@dimen/medium_spacing"
                                android:src="@drawable/ic_add"
                                android:tint="@color/colorPrimary"/>

                        </LinearLayout>


                        <CheckBox
                            android:id="@+id/chk_imperial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/medium_spacing"
                            android:text="@string/use_imperial_units"/>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/drawer"/>
</android.support.v4.widget.DrawerLayout>